FIX: Booking time buttons on mobile fixed

--- a/wp-content/themes/nobooze/assets/public/css/frontend.css
+++ b/wp-content/themes/nobooze/assets/public/css/frontend.css
@@ -4409,6 +4409,7 @@ p > a,
 .booking-section .cpp_form #fbuilder .slots .availableslot,
 .booking-section .cpp_form #fbuilder .slots .choosen {
   width: 100%;
+  margin: 0;
   margin-bottom: 20px;
   border: none;
   padding: 0;
