--- a/wp-content/themes/nobooze/assets/src/sass/template/_booking-section.scss
+++ b/wp-content/themes/nobooze/assets/src/sass/template/_booking-section.scss
@@ -125,6 +125,7 @@
                 .availableslot,
                 .choosen {
                     width: 100%;
+                    margin: 0;
                     margin-bottom: 20px;
                     border: none;
                     padding: 0;
